# secrettickets_contracts

./: .gitpod.yml  Cargo.toml  README.md  contract.wasm  notes.txt
src/: contract.rs  msg.rs  state.rs
