[package]
name = "secrettickets"
version = "0.0.0"
authors = ["Campbell Border <campbell.border@uqconnect.edu.au>"]
edition = "2021"
publish = false
description = "Privacy preserving event ticketing system"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
bincode = "1.3.3"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
extprim = "1.7.1"
hex = "0.4.3"
rand = {version = "0.8.5", default-features = false}
rand_chacha = "0.3.1"
rsa = { version = "0.6.0", default-features = false, features = ["pem"]}
serde = { version = "=1.0.145", default-features = false, features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0"
